Features: create inteerfaces to date values

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:types": "tsc basics/types.ts --outDir dist/ && node dist/types.js",
     "start:enums": "tsc basics/enums.ts --outDir dist/ && node dist/enums.js",
+    "start:interfaces": "tsc basics/interfaces.ts --outDir dist/ && node dist/interfaces.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
   ,
